--- a/styles.css
+++ b/styles.css
@@ -94,25 +94,31 @@ code {
 
 @media only screen and (max-width: 600px) {
     /* For mobile phones: */
-    body {
-      font-size: 16px;
-    }
-    
-    #navbar {
-      position: absolute;
-      top: 0;
-      padding: 0;
-      margin: 0;
-      width: 100%;
-      background-color: #0E0B16;
-      color: #FFEEDB;
-    }
-  
-    #main-doc {
-      position: relative;
-      margin-left: 0px;
-      margin-top: 285px;
-    }
+body {
+  font-size: 16px;
+}
+
+#navbar {
+  position: absolute;
+  top: 0;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0E0B16;
+  color: #FFEEDB;
+}
+
+#main-doc {
+  position: relative;
+  margin-left: 0px;
+  margin-top: 100%;
+  background-color: #241b3c;
+}
+
+code {
+  font-size: 90%;
+}
 
 }
   
