--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ code {
     /* For mobile phones: */
 body {
   font-size: 16px;
+  display: flex;
 }
 
 #navbar {
@@ -104,15 +105,18 @@ body {
   padding: 0;
   margin: 0;
   width: 100%;
-  height: 100%;
+  height: fit-content;
+  max-height: 400px;
   background-color: #0E0B16;
   color: #FFEEDB;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 #main-doc {
   position: relative;
   margin-left: 0px;
-  margin-top: 100%;
+  margin-top: 95%;
   background-color: #241b3c;
 }
 
